Fixup for commit 859c1a9eff28e824269096bc27f835b1dbe7ad25